<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BiometricCheckIn</string>

    <string name="scan">Scan</string>

    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="email">Email:</string>

    <string name="password">Password:</string>

    <string name="i_agree_to_the_citi_terms_of_service_and_honor_code_required">I agree to the CiTi Terms of Service and Honor Code (required)!</string>

    <string name="login">login</string>

    <string name="logo">logo</string>

    <string name="welcome">Welcome</string>
    <string name="textview">TextView</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="not_registered">Not Registered?</string>

    <string name="already_registered">Already Registered?</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="intern">Intern</string>

    <string name="admin">Admin</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name</string>
    <string name="time">TextView</string>

    <string name="username">Username:</string>
    <string name="surname">Surname:</string>
    <string name="name">Name</string>
    <string name="attendance">Attendance:</string>
    <string name="program">Program:</string>
    <string name="check_in">Check-In</string>
    <string name="log_out">log out</string>
    <string name="already_check_in">Already Check In?</string>
    <string name="already_checked_in">Already checked in?</string>
    <string name="view_attendance">View attendance</string>
    <string name="you_can_check_in_below">You can check in below:</string>

    <string name="view_learneship_attendance">View Learnership pgm</string>
    <string name="to_view_the_overall_attendance">To view the overall attendance</string>
    <string name="to_view_only_the_skills_attendance">To only view the skills attendance</string>
    <string name="to_view_only_the_learnerships_attendance">To only view learnerships attendance</string>
    <string name="view_skills_attendance">view Skills pgm</string>
    <string name="add_email">Email:</string>
    <string name="if_you_want_to_add_a_new_user">If you want to add or remove a user</string>
    <string name="add">add</string>
    <string name="reset">Reset</string>
    <string name="to_reset_all_the_added_values_after_taking_attendance">To reset all the values</string>
    <string name="email_button">Email button</string>
    <string name="deleteEmails">Delete emails</string>
    <string name="check_remember">Remember me</string>
    <string name="textview2">TextView</string>

    <array name="Choice">
        <item>Admin</item>
        <item>Intern</item>
    </array>


</resources>