<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.CapacitiCheckIn.InternActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="274dp"
        android:layout_height="115dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="269dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#E8F0FE"
        android:duplicateParentState="false"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textCapSentences"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/program"
        android:layout_width="269dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#E8F0FE"
        android:duplicateParentState="false"
        android:ems="10"
        android:hint="@string/program"
        android:inputType="textCapSentences"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/surname"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="@+id/surname"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <EditText
        android:id="@+id/name"
        android:layout_width="269dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="#E8F0FE"
        android:duplicateParentState="false"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internText" />

    <TextView
        android:id="@+id/internText"
        android:layout_width="154dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/monoton"
        android:text="@string/intern"
        android:textAlignment="center"
        android:textColor="#1D2951"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/takeAttedenceBtn"
        android:layout_width="233dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#1D2951"
        android:text="@string/check_in"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/program"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/program"
        app:layout_constraintTop_toBottomOf="@+id/program"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="82dp"
        android:layout_height="37dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#1D2951"
        android:text="@string/log_out"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/alreadyCheckedIntxt"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="@+id/alreadyCheckedIntxt"
        app:layout_constraintTop_toBottomOf="@+id/alreadyCheckedIntxt"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="lollipop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="352dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="124dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="270dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:background="#E8F0FE"
        android:text="@string/time"
        android:textColor="#1D2951"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/program"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/program"
        app:layout_constraintTop_toBottomOf="@+id/program" />

    <TextView
        android:id="@+id/alreadyCheckedIntxt"
        android:layout_width="148dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="48dp"
        android:text="@string/already_checked_in"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/takeAttedenceBtn"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/takeAttedenceBtn"
        app:layout_constraintTop_toBottomOf="@+id/takeAttedenceBtn"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/checkInTxt"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:text="@string/you_can_check_in_below"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/internText" />


</androidx.constraintlayout.widget.ConstraintLayout>